--- a/Comunicacao_HiveMQ.ipynb
+++ b/Comunicacao_HiveMQ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNqnJFQFkpSTxAoCoVSK0Qj",
+      "authorship_tag": "ABX9TyP6ccHz9UYGhXodSkTuN/z+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JnvwDDUCH9TU",
-        "outputId": "874f1c93-69c7-40e8-97f2-b13bae24b588"
+        "outputId": "043d7068-1db5-4f0f-ef83-fd1f7e369d57"
       },
       "execution_count": 2,
       "outputs": [
@@ -69,7 +69,7 @@
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Building wheels for collected packages: paho-mqtt\n",
             "  Building wheel for paho-mqtt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for paho-mqtt: filename=paho_mqtt-1.6.1-py3-none-any.whl size=62118 sha256=f6e6744b9fc407c9ca32263944bb1ec9c57c163f66fa7b68a3745e52f196fdbf\n",
+            "  Created wheel for paho-mqtt: filename=paho_mqtt-1.6.1-py3-none-any.whl size=62118 sha256=00cae4868e7044ddfcb1404b1f37ddc68454427b408dd33b764c3f782d850de5\n",
             "  Stored in directory: /root/.cache/pip/wheels/8b/bb/0c/79444d1dee20324d442856979b5b519b48828b0bd3d05df84a\n",
             "Successfully built paho-mqtt\n",
             "Installing collected packages: paho-mqtt\n",
@@ -84,7 +84,8 @@
         "# Importa bibliotecas\n",
         "\n",
         "import paho.mqtt.client as mqtt # paho eh biblioteca principal para trabalhar com mqtt\n",
-        "import time # biblioteca de temporalizacao"
+        "import time # biblioteca de temporalizacao\n",
+        "from hal import temperatura, umidade, aquecedor"
       ],
       "metadata": {
         "id": "43lOshiCqp00"
@@ -106,7 +107,7 @@
       "metadata": {
         "id": "sp-TJHBpq6f2"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -123,9 +124,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae1e6297-eac7-4c55-dfb9-820e4c7b3b7a"
+        "outputId": "f9988867-1fa8-42c5-d95e-dfaa1adb22f9"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -135,7 +136,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 9
         }
       ]
     },
@@ -146,10 +147,10 @@
         "# Argumentos sao topico e mensagem\n",
         "\n",
         "while True:\n",
-        "    client.publish('pucpr/iotmc/carla/temperatura', 24.1) # acessa hardware de sensor de temperatura\n",
+        "    client.publish('pucpr/iotmc/carla/temperatura', temperatura()) # acessa hardware de sensor de temperatura\n",
         "    # evitar envio de informacoes compostas na mensagem, a menos que tenha necessidade\n",
-        "    client.publish('pucpr/iotmc/carla/umidade', 60.1) # acessa hardware de sensor de umidade\n",
-        "    time.sleep(1) # pausa para enviar a mensagem\n",
+        "    client.publish('pucpr/iotmc/carla/umidade', umidade()) # acessa hardware de sensor de umidade\n",
+        "    time.sleep(5) # pausa para enviar a mensagem\n",
         "    # apos conectar o HIveMQ, criar topico 'pucpr/iotmc/carla/#' para monitoramento de mensagens via codigo"
       ],
       "metadata": {
@@ -172,7 +173,7 @@
       "source": [
         "# Desconecta do broker\n",
         "\n",
-        "# client.disconnect(0) #desativada linha para rodar laço while"
+        "# client.disconnect(0) #desativada a linha de comando para rodar laço while"
       ],
       "metadata": {
         "id": "PZu_QPs-r-K9"
@@ -184,13 +185,17 @@
       "cell_type": "markdown",
       "source": [
         "> VISUALIZAÇÃO DE MENSAGENS RECEBIDAS NO DASHBOARD DO HIVEMQ  \n",
-        "> - 1a. execução com tópico de temperatura  \n",
+        "> - 1a. execução de tópico sobre temperatura  \n",
         "\n",
         "> <img src='https://i.postimg.cc/VkdBzJyM/tela-topicos-hivemq.png'>  \n",
         "\n",
-        "> - 2a. execução com 2 tópicos: temperatura e umidade  \n",
+        "> - 2a. execução de 2 tópicos (temperatura e umidade)  \n",
         "\n",
         "> <img src='https://i.postimg.cc/3JL7yC9k/tela-topicos2-hive.png'>  \n",
+        "\n",
+        "> - 3a. execução de 2 tópicos com valores aleatórios (umidade e temperatura)  \n",
+        "\n",
+        "> <img src='https://i.postimg.cc/Nj5DpJZ2/tela-topicos3-hive.png'>\n",
         "\n"
       ],
       "metadata": {
