--- a/Comunicacao_HiveMQ.ipynb
+++ b/Comunicacao_HiveMQ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6ccHz9UYGhXodSkTuN/z+",
+      "authorship_tag": "ABX9TyPKRzljHxZiORzrur6u7n0O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -193,7 +193,7 @@
         "\n",
         "> <img src='https://i.postimg.cc/3JL7yC9k/tela-topicos2-hive.png'>  \n",
         "\n",
-        "> - 3a. execução de 2 tópicos com valores aleatórios (umidade e temperatura)  \n",
+        "> - 3a. execução de 2 tópicos com valores aleatórios (temperatura e umidade)  \n",
         "\n",
         "> <img src='https://i.postimg.cc/Nj5DpJZ2/tela-topicos3-hive.png'>\n",
         "\n"
