--- a/Comunicacao_HiveMQ.ipynb
+++ b/Comunicacao_HiveMQ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKRzljHxZiORzrur6u7n0O",
+      "authorship_tag": "ABX9TyNys5pa2DKxefWrhWMIKL9t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -85,12 +85,13 @@
         "\n",
         "import paho.mqtt.client as mqtt # paho eh biblioteca principal para trabalhar com mqtt\n",
         "import time # biblioteca de temporalizacao\n",
-        "from hal import temperatura, umidade, aquecedor"
+        "from hal import temperatura, umidade, aquecedor\n",
+        "from definitions import user, password, client_id, server, port"
       ],
       "metadata": {
         "id": "43lOshiCqp00"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -98,16 +99,16 @@
       "source": [
         "# Configuracoes de credenciais para conexao com broker MQTT\n",
         "\n",
-        "user = '' # não preencher user e password porque HiveMQ nao precisa\n",
-        "password = '' # deve preencher para outros tipos de broker\n",
-        "client_id = 'abcdefghijk12345678' # para hive pode ser string sem espaços como identificador do dispositivo\n",
-        "server = 'mqtt-dashboard.com' # usar servidor que aparece na tela do HiveMQ\n",
-        "port = 1883 # usar porta padrao do mqtt (1883), dispensar porta que há na interface do navegador"
+        "#user = '' # não preencher user e password porque HiveMQ nao precisa\n",
+        "#password = '' # deve preencher para outros tipos de broker\n",
+        "#client_id = 'abcdefghijk12345678' # para hive pode ser string sem espaços como identificador do dispositivo\n",
+        "#server = 'mqtt-dashboard.com' # usar servidor que aparece na tela do HiveMQ\n",
+        "#port = 1883 # usar porta padrao do mqtt (1883), dispensar porta que há na interface do navegador"
       ],
       "metadata": {
         "id": "sp-TJHBpq6f2"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -124,9 +125,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26fcf56f-bf1b-40ed-b1b3-c737c085bd83"
+        "outputId": "5b8ef343-20cb-42ac-ee1d-925b82a46737"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 16
         }
       ]
     },
@@ -195,7 +196,12 @@
         "\n",
         "> - 3a. execução de 2 tópicos com valores aleatórios (temperatura e umidade)  \n",
         "\n",
-        "> <img src='https://i.postimg.cc/Nj5DpJZ2/tela-topicos3-hive.png'>\n",
+        "> <img src='https://i.postimg.cc/Nj5DpJZ2/tela-topicos3-hive.png'>  \n",
+        "\n",
+        "> 4a. execução de 2 tópicos com valores aleatórios (temperatura e umidade) e reorganização do código  \n",
+        "\n",
+        "> <img src='https://i.postimg.cc/YC2W2vt6/tela-topicos4-hive.png'>  \n",
+        "\n",
         "\n"
       ],
       "metadata": {
