--- a/Comunicacao_HiveMQ.ipynb
+++ b/Comunicacao_HiveMQ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNys5pa2DKxefWrhWMIKL9t",
+      "authorship_tag": "ABX9TyO+6ScAR6R4c/brFYHtkaLx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,30 +91,41 @@
       "metadata": {
         "id": "43lOshiCqp00"
       },
-      "execution_count": 14,
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Configuracoes de credenciais para conexao com broker MQTT\n",
+        "# Funcao para receber e processar mensagem recebida do client\n",
         "\n",
-        "#user = '' # não preencher user e password porque HiveMQ nao precisa\n",
-        "#password = '' # deve preencher para outros tipos de broker\n",
-        "#client_id = 'abcdefghijk12345678' # para hive pode ser string sem espaços como identificador do dispositivo\n",
-        "#server = 'mqtt-dashboard.com' # usar servidor que aparece na tela do HiveMQ\n",
-        "#port = 1883 # usar porta padrao do mqtt (1883), dispensar porta que há na interface do navegador"
+        "def mensagem(client, user, msg):\n",
+        "    print(msg.payload.decode())\n",
+        "\n",
+        "    # pass\n",
+        "    # testa se metodo foi evocado com breakpoint (ponto de parada) no pass e execucao em modo debug (PyCharm)"
       ],
       "metadata": {
-        "id": "sp-TJHBpq6f2"
+        "id": "QM6jn1oHtpi7"
       },
-      "execution_count": 15,
+      "execution_count": 20,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "> SAÍDA DO TESTE DA FUNÇÃO \"MENSAGEM\" COM EXECUÇÃO EM MODO DEBUG NO PYCHARM  \n",
+        "> <img src='https://i.postimg.cc/T11CLTM1/fc-mensagem-debug.png'>\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NlMPiNgovP2F"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Faz conexao com HiveMQ\n",
+        "# Conexao inicial com HiveMQ\n",
         "\n",
         "client = mqtt.Client(client_id) # objeto recebe a id do cliente\n",
         "client.username_pw_set(user, password) # objeto recebe usuario e senha\n",
@@ -125,9 +136,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5b8ef343-20cb-42ac-ee1d-925b82a46737"
+        "outputId": "4ae6f147-c91e-4c6f-c761-9b412a63d45f"
       },
-      "execution_count": 16,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -137,9 +148,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define funcao, topico e ativa monitoramento\n",
+        "\n",
+        "client.on_message = mensagem # callback passa somente nome da funcao evocada sem usar ()\n",
+        "client.subscribe('pucpr/iotmc/carla/aquecedor') # informa topico de interesse - subscriber\n",
+        "client.loop_start() # informa que deve monitorar as mensagens recebidas do topico"
+      ],
+      "metadata": {
+        "id": "Uu1FY02Lt5Mx"
+      },
+      "execution_count": 22,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -155,10 +181,30 @@
         "    # apos conectar o HIveMQ, criar topico 'pucpr/iotmc/carla/#' para monitoramento de mensagens via codigo"
       ],
       "metadata": {
-        "id": "_FAhqM5QrGcB"
+        "id": "_FAhqM5QrGcB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9829b7d3-2630-4031-dea0-71964573f5f7"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "on\n",
+            "off\n",
+            "teste\n",
+            "teste\n",
+            "on\n",
+            "off\n",
+            "off\n",
+            "on\n",
+            "teste\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -187,20 +233,19 @@
       "source": [
         "> VISUALIZAÇÃO DE MENSAGENS RECEBIDAS NO DASHBOARD DO HIVEMQ  \n",
         "> - 1a. execução de tópico sobre temperatura  \n",
-        "\n",
         "> <img src='https://i.postimg.cc/VkdBzJyM/tela-topicos-hivemq.png'>  \n",
-        "\n",
-        "> - 2a. execução de 2 tópicos (temperatura e umidade)  \n",
-        "\n",
+        "> - 2a. execução de 2 tópicos (temperatura e umidade)\n",
         "> <img src='https://i.postimg.cc/3JL7yC9k/tela-topicos2-hive.png'>  \n",
-        "\n",
         "> - 3a. execução de 2 tópicos com valores aleatórios (temperatura e umidade)  \n",
-        "\n",
         "> <img src='https://i.postimg.cc/Nj5DpJZ2/tela-topicos3-hive.png'>  \n",
-        "\n",
         "> 4a. execução de 2 tópicos com valores aleatórios (temperatura e umidade) e reorganização do código  \n",
+        "> <img src='https://i.postimg.cc/YC2W2vt6/tela-topicos4-hive.png'>   \n",
+        "> - 5a. execução de tópico com mensagem do client para ligar dispositivo (aquecedor)  \n",
+        "> <img src='https://i.postimg.cc/8CrHVZdJ/tela-topicos5-hive.png'>  \n",
+        "> - 6a. execução de tópico com mensagens do client para aquecedor  \n",
+        "> <img src='https://i.postimg.cc/G3YmsGKF/tela-topicos6-hive.png'>  \n",
         "\n",
-        "> <img src='https://i.postimg.cc/YC2W2vt6/tela-topicos4-hive.png'>  \n",
+        "\n",
         "\n",
         "\n"
       ],
