--- a/Comunicacao_HiveMQ.ipynb
+++ b/Comunicacao_HiveMQ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+6ScAR6R4c/brFYHtkaLx",
+      "authorship_tag": "ABX9TyNymqoIW8IWjkcOu+mYWVuN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "id": "JnvwDDUCH9TU",
         "outputId": "043d7068-1db5-4f0f-ef83-fd1f7e369d57"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "43lOshiCqp00"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,15 +100,17 @@
         "# Funcao para receber e processar mensagem recebida do client\n",
         "\n",
         "def mensagem(client, user, msg):\n",
-        "    print(msg.payload.decode())\n",
+        "  if msg.topic == 'pucpr/iotmc/carla/aquecedor':\n",
+        "    aquecedor(msg.payload.decode()) # evoca o metodo aquecedor para ligar/desligar\n",
         "\n",
-        "    # pass\n",
-        "    # testa se metodo foi evocado com breakpoint (ponto de parada) no pass e execucao em modo debug (PyCharm)"
+        "  # print(msg.payload.decode())  # testa uso de publish com topico do client\n",
+        "  # pass\n",
+        "  # testa se metodo foi evocado com breakpoint (ponto de parada) no pass e execucao em modo debug (PyCharm)"
       ],
       "metadata": {
         "id": "QM6jn1oHtpi7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,9 +138,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4ae6f147-c91e-4c6f-c761-9b412a63d45f"
+        "outputId": "8dca2c66-8029-4dad-a6c8-fbbb50ab7fe2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +150,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 26
         }
       ]
     },
@@ -158,13 +160,13 @@
         "# Define funcao, topico e ativa monitoramento\n",
         "\n",
         "client.on_message = mensagem # callback passa somente nome da funcao evocada sem usar ()\n",
-        "client.subscribe('pucpr/iotmc/carla/aquecedor') # informa topico de interesse - subscriber\n",
+        "client.subscribe('pucpr/iotmc/carla/#') # informa topico de interesse - subscriber\n",
         "client.loop_start() # informa que deve monitorar as mensagens recebidas do topico"
       ],
       "metadata": {
         "id": "Uu1FY02Lt5Mx"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,30 +183,10 @@
         "    # apos conectar o HIveMQ, criar topico 'pucpr/iotmc/carla/#' para monitoramento de mensagens via codigo"
       ],
       "metadata": {
-        "id": "_FAhqM5QrGcB",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9829b7d3-2630-4031-dea0-71964573f5f7"
+        "id": "_FAhqM5QrGcB"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "on\n",
-            "off\n",
-            "teste\n",
-            "teste\n",
-            "on\n",
-            "off\n",
-            "off\n",
-            "on\n",
-            "teste\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
